--- a/src/index.htm
+++ b/src/index.htm
@@ -15,6 +15,7 @@
 		<script src="js/class.js"></script>
 		<script src="js/stats.js"></script>
 		<script src="js/OrbitControls.js"></script>
+		<script src="js/input.js"></script>
 		<script src="js/webracer.js"></script>
 	</body>
 </html>
