New file for the Car class that handles all the logic for the car including the loading and movement.

--- a/src/index.htm
+++ b/src/index.htm
@@ -16,6 +16,7 @@
 		<script src="js/stats.js"></script>
 		<script src="js/OrbitControls.js"></script>
 		<script src="js/input.js"></script>
+		<script src="js/car.js"></script>
 		<script src="js/webracer.js"></script>
 	</body>
 </html>
