Introducing world.js to handle the loading/generation of levels

--- a/src/index.htm
+++ b/src/index.htm
@@ -17,6 +17,7 @@
 		<script src="js/OrbitControls.js"></script>
 		<script src="js/input.js"></script>
 		<script src="js/car.js"></script>
+		<script src="js/world.js"></script>
 		<script src="js/webracer.js"></script>
 	</body>
 </html>
